# exam-env

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  index.html  package.json  pnpm-lock.yaml  sample.env  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: blank-issue.md
.github/workflows/: auto-release.yml  build.yml  deploy.yml  publish.yml  upload-to-r2.yml  version-bump.yml
backend/: Cargo.toml  Entitlements.plist  tauri.conf.json  tauri.microsoftstore.conf.json
backend/icons/: icon.icns
backend/src/: commands.rs  error.rs  main.rs  secret.rs  sentry_filter.rs  utils.rs
frontend/: index.css  main.tsx  vite-env.d.ts
frontend/components/: exam-card.tsx  exam-submission-modal.tsx  header.tsx  prism-formatted.tsx  protected-route.tsx  question-set-form.tsx  question-submission-error-modal.tsx  use-event-listener.tsx  use-invoke.tsx
frontend/contexts/: auth.tsx  index.ts  theme.tsx
frontend/pages/: error.tsx  exam-landing.tsx  exam.tsx  landing.tsx  login.tsx  root.tsx  splashscreen.tsx
frontend/theme/: index.ts
frontend/utils/: env.ts  errors.ts  fetch.ts  markdown.ts  serde.ts  superbase.ts
prisma/: api-schema.ts  index.js  json-schema.json  post-generate.js  schema.prisma
public/: exam-attempt.json  exam-config.json  generated-exams.json  prism.css  prism.js  user-exam-generate.json
public/mocks/: exams.json  generated-exam.json  latest.json
scripts/: WindowsEnv.ps1
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  relic.conf  tauri.conf.dev.json  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  error.rs  main.rs  request.rs  secret.rs  utils.rs
src/components/: audio-player.tsx  button-loading.tsx  camera.tsx  exam-card.tsx  exam-submission-modal.tsx  flash.tsx  header.tsx  incompatible-device-modal.tsx  offline-modal.tsx  protected-route.tsx  question-set-form.tsx  question-submission-error-modal.tsx  use-app-focus.tsx  use-device-compatability-check.tsx  use-invoke.tsx  use-prevent-immediate-exit.tsx
src/contexts/: auth.tsx
src/pages/: error.tsx  exam-landing.tsx  exam.tsx  landing.tsx  login.tsx  root.tsx  splashscreen.tsx  test.tsx
src/utils/: cdn.ts  commands.ts  env.ts  errors.ts  fetch.ts  markdown.ts  screenshot.ts  serde.ts  superbase.ts  types.ts
