[package]
name = "exam-env"
version = "0.4.1"
description = "Exam environment for freeCodeCamp"
authors = ["freeCodeCamp"]
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8.10"
bson = "2.14.0"
typify = "0.3.0"
chrono = { version = "0.4.40", features = ["serde"] }
tauri-plugin-dialog = "2.2.0"
sentry = "0.36.0"
dotenvy_macro = "0.15.7"
keyring = { version = "3.6.2", features = [
  "windows-native",
  "apple-native",
  "linux-native",
] }
tauri-plugin-http = { version = "2.4.2", features = ["multipart"] }
base64 = "0.22.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.6.1"
