[package]
name = "exam-env"
version = "0.4.1"
description = "Exam environment for freeCodeCamp"
authors = ["freeCodeCamp"]
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8.10"
bson = "2.14.0"
typify = "0.4.1"
chrono = { version = "0.4.41", features = ["serde"] }
tauri-plugin-dialog = "2.2.1"
sentry = "0.38.1"
dotenvy_macro = "0.15.7"
keyring = { version = "3.6.2", features = [
  "windows-native",
  "apple-native",
  "linux-native",
] }
tauri-plugin-http = { version = "2.4.3", features = ["multipart"] }
base64 = "0.22.1"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.7.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
