[package]
name = "exam-env"
version = "0.9.2"
description = "Exam environment for freeCodeCamp"
authors = ["freeCodeCamp"]
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.4.2"
sentry = { version = "0.45.0", features = ["tracing", "logs"] }
dotenvy_macro = "0.15.7"
keyring = { version = "3.6.3", features = [
  "windows-native",
  "apple-native",
  "linux-native",
] }
tauri-plugin-http = { version = "2.5.4", features = ["multipart"] }
tauri-plugin-opener = "2"
time = "0.3.44"
tauri-plugin-log = "2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tauri-plugin-deep-link = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2.9.0"
